--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
-    "jest": "^27.0.4"
+    "jest": "^27.0.4",
+    "typescript": "^4.3.3"
   }
 }
